--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,9 @@
     <color name="colorAccent">#33ffff</color>
     <color name="turqoise">#5BD3D3</color>
     <color name="light_blue">#7FF7F7</color>
+    <color name="dark_blue">#0C3761</color>
     <color name="white">#fff</color>
     <color name="black">#000000</color>
     <color name="dark_gray">#3D3D3D</color>
+    <color name="light_gray">#cccccc</color>
 </resources>
