--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,6 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:id="@+id/layout"
+    android:clickable="true"
+    android:focusableInTouchMode="true"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -16,11 +18,34 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@null"
         android:translationZ="90dp"
-        android:theme="@style/ToolbarColoredBackArrow" />
+        android:theme="@style/ToolbarColoredBackArrow">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/registerButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:textStyle="bold"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="17sp"
+                android:layout_alignParentEnd="true"
+                android:paddingRight="20dp"
+                android:text="@string/login_create_account"/>
+
+        </RelativeLayout>
+
+
+
+
+    </androidx.appcompat.widget.Toolbar>
 
 
     <LinearLayout
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -30,14 +55,68 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/login_welcome"
+            android:text="@string/bottom_sheet_login"
             android:textSize="32sp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             android:fontFamily="sans-serif-medium"
             android:textColor="@color/dark_blue"
-            android:layout_gravity="left"
+            android:layout_gravity="center_horizontal"
             />
 
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:padding="15dp">
+
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/signInGoogleButton"
+                    android:layout_width="70dp"
+                    android:src="@drawable/google_icon"
+                    android:backgroundTint="@color/white"
+                    app:fabCustomSize="70dp"
+                    app:borderWidth="0dp"
+                    app:elevation="4dp"
+                    android:layout_height="70dp" />
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/signInFacebookButton"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    app:fabCustomSize="70dp"
+                    android:src="@drawable/facebook_icon_2"
+                    android:layout_toRightOf="@id/signInGoogleButton"
+                    android:backgroundTint="@color/white"
+                    android:layout_marginLeft="10dp"
+                    app:borderWidth="0dp"
+                    app:elevation="4dp"
+                    android:textColor="@android:color/white" />
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif-medium"
+            android:layout_gravity="center_horizontal"
+            android:padding="15dp"
+            android:layout_marginTop="5dp"
+            android:text="@string/login_instead"
+            android:textColor="@color/dark_blue"
+            />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/usernameInput"
@@ -47,6 +126,10 @@
             app:hintTextAppearance="@style/MyHintStyle"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:boxStrokeColor="@color/colorPrimaryDark"
+            app:boxCornerRadiusBottomEnd="15dp"
+            app:boxCornerRadiusBottomStart="15dp"
+            app:boxCornerRadiusTopEnd="15dp"
+            app:boxCornerRadiusTopStart="15dp"
             app:errorEnabled="true">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -64,6 +147,10 @@
             app:hintAnimationEnabled="true"
             app:hintTextAppearance="@style/MyHintStyle"
             app:passwordToggleEnabled="true"
+            app:boxCornerRadiusBottomEnd="15dp"
+            app:boxCornerRadiusBottomStart="15dp"
+            app:boxCornerRadiusTopEnd="15dp"
+            app:boxCornerRadiusTopStart="15dp"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:boxStrokeColor="@color/colorPrimaryDark"
             app:errorEnabled="true">
@@ -77,41 +164,26 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/forgotButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp">
-
-            <TextView
-                android:id="@+id/registerButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="16sp"
-                android:text="@string/login_create_account"/>
-
-            <TextView
-                android:id="@+id/forgotButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/dark_blue"
-                android:textSize="16sp"
-                android:layout_alignParentEnd="true"
-                android:textStyle="bold"
-                android:text="@string/login_forgot_password"/>
-
-        </RelativeLayout>
+            android:textColor="@color/dark_blue"
+            android:textSize="16sp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:layout_gravity="center_horizontal"
+            android:textStyle="bold"
+            android:text="@string/login_forgot_password"/>
 
 
         <androidx.cardview.widget.CardView
             android:id="@+id/loginCardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="12dp"
+            app:cardCornerRadius="15dp"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="20dp"
             android:clickable="true"
             android:foreground="@drawable/ripple_rounded"
             android:backgroundTint="@color/colorPrimaryDark">
@@ -135,28 +207,20 @@
 
         </androidx.cardview.widget.CardView>
 
+
+
+
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="20dp">
 
-            <com.google.android.gms.common.SignInButton
-                android:id="@+id/signInGoogleButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
 
-            <Button
-                android:id="@+id/signInFacebookButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/com_facebook_blue"
-                android:text="@string/facebook_signup_text"
-                android:layout_alignParentEnd="true"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:textColor="@android:color/white" />
+
 
         </RelativeLayout>
+
 
 
     </LinearLayout>
