--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -15,6 +15,7 @@
     </com.google.android.gms.maps.MapView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/recenterLocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/white"
@@ -23,6 +24,7 @@
         android:clickable="true"
         android:layout_marginRight="30dp"
         android:layout_gravity="bottom|end"
+        app:borderWidth="0dp"
         app:layout_dodgeInsetEdges="bottom"
         android:layout_marginBottom="25dp"
         />
@@ -31,16 +33,15 @@
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/fabUpArrow"
         android:visibility="invisible"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:clickable="true"
         android:layout_gravity="bottom|center"
         app:layout_dodgeInsetEdges="bottom"
         android:layout_marginBottom="10dp"
         android:backgroundTint="@color/colorPrimaryDark"
         app:lottie_loop="true"
-        android:rotationX="180"
-        app:lottie_rawRes="@raw/up_arrow_2"
+        app:lottie_rawRes="@raw/up_arrow_3"
         />
 
 
@@ -120,7 +121,7 @@
             android:id="@+id/loggedInLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="invisible"
+            android:visibility="visible"
             android:orientation="vertical">
 
             <View
@@ -150,17 +151,134 @@
                     android:layout_marginBottom="10dp"
                     android:text="@string/bottom_sheet_welcome"/>
 
-                <EditText
-                    android:id="@+id/passwordEditText"
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:background="@drawable/roundedbutton"
-                    android:hint="@string/bottom_sheet_add_location_hint"
-                    android:textSize="20sp"
-                    android:inputType="textPassword"
-                    android:paddingLeft="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:singleLine="true"/>
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="15dp"
+                    android:elevation="4dp"
+                    android:backgroundTint="#F5F5F5">
+
+                    <fragment android:id="@+id/autocomplete_fragment"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+                        />
+
+                </androidx.cardview.widget.CardView>
+
+
+                <ScrollView
+                    android:id="@+id/extraInfoScrollView"
+                    android:visibility="invisible"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_marginTop="20dp">
+
+                        <RelativeLayout
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="10dp">
+
+                            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                                android:id="@+id/selectColorTextView"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                app:borderWidth="0dp"
+                                android:src="@drawable/ic_palette_black_24dp"
+                                android:layout_alignParentEnd="true"
+                                />
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_toLeftOf="@id/selectColorTextView"
+                                android:orientation="vertical">
+
+
+                                <SeekBar
+                                    android:layout_marginTop="15dp"
+                                    android:id="@+id/radiusSeekBar"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:minHeight="15dp"
+                                    android:maxHeight="15dp"
+                                    android:min="15"
+                                    android:max="50"
+                                    android:layout_marginLeft="10dp"
+                                    android:layout_marginRight="15dp"
+                                    android:splitTrack="false"
+                                    android:thumb="@drawable/custom_thumb"
+                                    android:progressDrawable="@drawable/custom_seekbar"/>
+
+                                <TextView
+                                    android:id="@+id/radiusTextView"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textSize="19sp"
+                                    android:fontFamily="sans-serif-medium"
+                                    android:padding="15dp"
+                                    android:text="@string/location_radius"
+                                    android:textColor="@color/colorAccent"
+                                    />
+
+
+                            </LinearLayout>
+
+
+                        </RelativeLayout>
+
+
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="12dp"
+                            android:layout_marginBottom="12dp">
+
+
+                            <Button
+                                android:id="@+id/saveButton"
+                                android:layout_width="100dp"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:layout_centerVertical="true"
+                                android:background="@drawable/roundedbutton"
+                                android:backgroundTint="@color/colorPrimaryDark"
+                                android:foreground="@drawable/ripple_rounded"
+                                android:text="@string/location_save"
+                                android:textAllCaps="false"
+                                android:textColor="#FFFFFF"
+                                android:textSize="18sp" />
+
+                            <TextView
+                                android:id="@+id/discardTextView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textSize="18sp"
+                                android:layout_marginRight="20dp"
+                                android:layout_centerVertical="true"
+                                android:fontFamily="sans-serif-medium"
+                                android:layout_toLeftOf="@id/saveButton"
+                                android:layout_marginBottom="5dp"
+                                android:text="@string/location_discard"
+                                android:textColor="@color/dark_blue"
+                                />
+
+
+
+                        </RelativeLayout>
+
+
+                    </LinearLayout>
+
+
+                </ScrollView>
 
 
 
