Facebook login bugs tackled Other minor bugs fixed

--- a/app/src/main/res/layout/dialog_location_finding.xml
+++ b/app/src/main/res/layout/dialog_location_finding.xml
@@ -35,7 +35,8 @@
             android:paddingTop="16dp"
             android:fontFamily="sans-serif-medium"
             android:textSize="18sp"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            />
 
     </RelativeLayout>
 
