--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -87,6 +87,8 @@
                         app:fabCustomSize="70dp"
                         app:borderWidth="0dp"
                         app:elevation="4dp"
+                        app:maxImageSize="32dp"
+                        android:foreground="@drawable/ripple_circle"
                         android:layout_height="70dp" />
 
                     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -99,6 +101,23 @@
                         android:backgroundTint="@color/white"
                         android:layout_marginLeft="10dp"
                         app:borderWidth="0dp"
+                        app:maxImageSize="32dp"
+                        android:foreground="@drawable/ripple_circle"
+                        app:elevation="4dp"
+                        android:textColor="@android:color/white" />
+
+                     <com.google.android.material.floatingactionbutton.FloatingActionButton
+                        android:id="@+id/signInTwitterButton"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"
+                        app:fabCustomSize="70dp"
+                        android:src="@drawable/twitter_icon"
+                        android:layout_toRightOf="@id/signInFacebookButton"
+                        android:backgroundTint="@color/white"
+                        android:layout_marginLeft="10dp"
+                        app:borderWidth="0dp"
+                        app:maxImageSize="32dp"
+                        android:foreground="@drawable/ripple_circle"
                         app:elevation="4dp"
                         android:textColor="@android:color/white" />
 
