--- a/app/src/main/res/layout/dialog_error.xml
+++ b/app/src/main/res/layout/dialog_error.xml
@@ -8,6 +8,15 @@
     android:layout_marginRight="30dp"
     app:cardCornerRadius="15dp">
 
+    <ImageView
+        android:id="@+id/closeDialogButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_close_blue_24dp"
+        android:layout_gravity="right"
+        android:paddingTop="15dp"
+        android:paddingRight="15dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -51,7 +60,7 @@
             android:layout_centerHorizontal="true"/>
 
         <Button
-            android:id="@+id/closeButton"
+            android:id="@+id/actionButton"
             android:layout_width="138dp"
             android:layout_height="wrap_content"
             android:background="@drawable/roundedbutton"
